fix: fixed styling broken in refactor

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   justify-content: space-between;
 }
 
-.manage-goal-item {
+/* .manage-goal-item {
   flex: 3 1 0px;
   align-items: center;
   margin-inline: 20px;
@@ -23,5 +23,5 @@
 .manage-goal-item.streak-container {
   flex: 1 1 0px;
   justify-content: space-evenly;
-}
+} */
 
