--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,6 +1,7 @@
 .list-header{
   text-align: center;
   width: 100%;
+  font-size: 36px;
 }
 
 .list-container {
@@ -13,6 +14,7 @@
   display: flex;
   align-items: center;
   max-height: 388px;
+  min-height: 168px;
   border: 1px solid grey;
   overflow: scroll;
 }
