--- a/src/components/Streak/Streak.css
+++ b/src/components/Streak/Streak.css
@@ -2,11 +2,15 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    gap: 20px;
+    flex-grow: 1;
+    margin-inline: 20px;
 }
 
 .streak-container h1{
     margin-bottom: 0px;
+    font-size: 36px;
+
 }
 
 .streak-container img {
